--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,15 @@
 ruby version 2.0.0
 
 rails version 4.0.3
+
+product show.html.erb 加 notice 則會顯示兩次flash
+
+
+
+user: 
+name email phone address
+可以看index, show
+
+admin:
+CRUD 新商品
+新增商品時發送email
