--- a/README.rdoc
+++ b/README.rdoc
@@ -3,14 +3,8 @@ ruby version 2.0.0
 rails version 4.0.3
 
 
-bug:
-product show.html.erb 加 notice 會顯示兩次flash 
-user 可 CRUD products
-rails 4.0 以上在 admin 內做 new, edit 會有問題 (災情很多，有解)
+To do :
 
-
-next to do
-
-admin:
-
-新增商品時發送email給用戶
+1. admin 新增商品時發送email給用戶
+2. admin user click delete button to destroy product
+3. 使 user 無權限 Delete products
