--- a/README.rdoc
+++ b/README.rdoc
@@ -5,9 +5,6 @@ rails version 4.0.3
 
 To do :
 
-**1. admin 新增商品時發送email給用戶
+** admin 新增商品時發送email給用戶
 
-
-2. 使 user 無權限 Delete products
-
-3. product create didn't validate
+-> product create didn't validate with same name
