--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,18 @@
-ruby version 2.0.0
+# Version: 
 
-rails version 4.0.3
+* ruby version 2.0.0
+* rails version 4.0.3
 
+=====
 
+## Using SQL Server: 
 
-gem tiny_tds: brew install freetds
+* brew install freetds(for tiny_tds gem)
+
+## 自動化清除tmp, log, db:drop, db:create, db:migrate
+
+* rake dev:build
+
+## 自動build 外加 db:seed
+
+* rake dev:rebuilt
